implementando migrations, banco de dados e refatorando código
