# src/routes/categories.routes.ts
@@ -3,27 +3,29 @@ import { Router } from 'express';
 import multer from 'multer';
 
 // importando modelo de Array[categorias]
-import { createCategoryController } from '../modules/cars/useCases/createCategory/index';
-import { importCategoryController } from '../modules/cars/useCases/importCategory';
-import { listCategoriesController } from '../modules/cars/useCases/listCategories';
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController';
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController';
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController';
 // ativando express
 const categoriesRoutes = Router();
 const upload = multer({
     dest: './tmp',
 });
 
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
+
 // criando rota de categoria
-categoriesRoutes.post('/', (request, response) => {
-    return createCategoryController.handle(request, response);
-});
+categoriesRoutes.post('/', createCategoryController.handle);
 
 // listando categorias
-categoriesRoutes.get('/', (request, response) => {
-    return listCategoriesController.handle(request, response);
-});
+categoriesRoutes.get('/', listCategoriesController.handle);
 
-categoriesRoutes.post('/import', upload.single('file'), (request, response) => {
-    return importCategoryController.handle(request, response);
-});
+categoriesRoutes.post(
+    '/import',
+    upload.single('file'),
+    importCategoryController.handle,
+);
 
 export { categoriesRoutes };
